# swagger/spring-server/src/main/resources/api-spec.yaml
@@ -22,7 +22,7 @@ paths:
             $ref: '#/definitions/Beer'
       responses:
         '201':
-          description: created
+          description: beer created
           schema:
             type: object
     get:
@@ -54,6 +54,35 @@ paths:
           description: success
           schema:
             $ref: '#/definitions/Beer'
+    patch:
+      description: update a beer's information
+      operationId: updateBeer
+      consumes:
+        - application/json
+      parameters:
+        - name: name
+          in: path
+          required: true
+          type: string
+        - name: beer
+          in: body
+          required: true
+          schema:
+            $ref: '#/definitions/Beer'
+      responses:
+        '201':
+          description: beer updated
+    delete:
+      description: delete a beer from the encyclopedia
+      operationId: deleteBeer
+      parameters:
+        - name: name
+          in: path
+          required: true
+          type: string
+      responses:
+        "204":
+          description: beer deleted
 
   /companies:
     post:
@@ -69,7 +98,7 @@ paths:
             $ref: '#/definitions/Company'
       responses:
         '201':
-          description: created
+          description: company created
           schema:
             type: object
     get:
@@ -101,6 +130,35 @@ paths:
            description: success
            schema:
              $ref: '#/definitions/Company'
+     patch:
+       description: update a company's information
+       operationId: updateCompany
+       consumes:
+         - application/json
+       parameters:
+         - name: name
+           in: path
+           required: true
+           type: string
+         - name: company
+           in: body
+           required: true
+           schema:
+             $ref: '#/definitions/Company'
+       responses:
+         '201':
+           description: company updated
+     delete:
+       description: delete a company from the encyclopedia
+       operationId: deleteCompany
+       parameters:
+         - name: name
+           in: path
+           required: true
+           type: string
+       responses:
+         "204":
+           description: company deleted
 
 definitions:
   Beer:
